rspec: check errors in test
Added check for error list in test "nesmaze neprazdnou divizi"

--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -3,3 +3,6 @@ cs:
     errors:
       messages:
         blank: Toto pole nemůže zůstat prázdné
+      models:
+        unit:
+          not_empty: Nelze smazat neprázdnou skupinu
